# nirimap

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs
src/ipc/: client.rs  events.rs  mod.rs
src/state/: mod.rs  model.rs
src/ui/: layer.rs  minimap.rs  mod.rs
